gcc/testsuite/rust/compile/extern_type_item_missing_semi.rs
// { dg-additional-options "-fsyntax-only" }

extern "C" {
    type F;
    type E // { dg-error "failed to parse" }
} // { dg-error "expecting" }
